Fix ui_devtools client address

Our dev tools used '0.0.0.0' as client address which doesn't work
on Windows. See some silimar discussion at
https://github.com/senecajs/seneca-transport/issues/37. Since we
don't have any remote server discovery in place, it would be
sufficient to use local host address '127.0.0.1' for showing the
local client address on chrome://inspect page. Thus this CL fixes
the client address by replacing with local host address.

BUG=750191

Change-Id: Ife011e59316b472af3e56036d539282dd6667247
Reviewed-on: https://chromium-review.googlesource.com/1249271
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595121}
Former-commit-id: d83384e5de55125f77d475b3b58f578a306ca25d